more tweaks and cleanup

--- a/Practical2/writeup/Practical2_writeup.tex
+++ b/Practical2/writeup/Practical2_writeup.tex
@@ -134,7 +134,7 @@ We tested a number of approaches to both add features, and to remove features wh
 \end{description}
 Unfortunately, that didn't improve our model's performance.
 
-(4) Creation of squared values for all quantitative variables. This did not help model performance but did lead us understand that "number of screens" a movie shown on was quite predictive. We then tuned the parameter for the exponent of "number of screens" (from 2.0 to 5.0) and found 4.3 to maximize our performance on two holdout samples -- this helped our performance gains in the model significantly.
+(4) Creation of squared values for all quantitative variables. This did not help model performance but did lead us understand that ``number of screens'' a movie shown on was quite predictive. We then tuned the parameter for the exponent of ``number of screens'' (from 2.0 to 5.0) and found 4.3 to maximize our performance on two holdout samples -- this helped our performance gains in the model significantly.
 
 (5) Creation of logs for all quantitative variables on the basis that large numbers (e.g. budgets) may have non-linear impacts on the revenues of a movie. This did not help the model's performance.
 
