successful split of vectorize and train

--- a/Practical3/writeup/Practical3_writeup.tex
+++ b/Practical3/writeup/Practical3_writeup.tex
@@ -35,6 +35,9 @@
 
 \subsection*{Preliminary Data Analysis}
 
+NOTES:
+4GB of XML to parse and process, first step was to split the training and the testing. broke into vectorize, train and test steps, persisting appropriate intermediate data at each step. This also enabled parallelization of test runs over a cluster of machines.
+
 \subsection*{Using Cross-validation}
 
 \section*{Approaches considered}
