slight progress in dump.py

--- a/Practical3/TODO
+++ b/Practical3/TODO
@@ -1,3 +1,11 @@
+TODO:
+get dump to work - very frustrating!
+Preliminary data analysis: number of different system calls and arguments, and their call frequency.
+fix the most obvious features, like putting each last call as a separate feature instead of an enum
+Validation code
+
+
+
 Problem statement:
 skewed (aka unbalanced) multi class classification
 
@@ -8,13 +16,6 @@ The higher the accuracy, the better the score, up to 100%. Basically assume it i
 of the single item classifiers reports a reasonable score.
 
 Output is an integer 0-14 following a specific order (see Problem Description).
-
-TODO:
-
-. Preliminary data analsys: number of different system calls and arguments, and their call frequency.
-
-. Does the dataset distribution frequency match the provided numbers?
-
 
 Classification Alternatives:
 
