added initial process metrics

--- a/Practical3/TODO
+++ b/Practical3/TODO
@@ -11,9 +11,9 @@ Validate Future Command Line Args:
 	 . algorithm to use (def: all)
        	 . store to detailed error log: fold, F1 score per class
 
-
 Other:
 . Preliminary data analysis: number of different system calls and arguments, and their call frequency.
+. get baseline test output to work (update test.py)
 
 Detailed features:
 . fix the most obvious features, like putting each last call as a separate feature instead of an enum
