--- a/Practical3/TODO
+++ b/Practical3/TODO
@@ -39,6 +39,7 @@ Classification Alternatives:
 4: Deep Learning / neural net / pylearn2
 
 Challenges / Open Questions:
+. how to prevent overfitting of test data?
 . how to determine confidence when classifier's output is binary? 
 . should classification rates be normalized? See [1]
 . vectorized output should be in YAML format for rapid reading and potential use by Theano
